--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,6 @@
 const path = require('path');
 
 module.exports = {
-    config: path.resolve("config", "database.js"),
-    "models-path": path.resolve("models")
+    config: path.resolve('config', 'database.js'),
+    "models-path": path.resolve('models')
 }
