--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=be4676ca28c5b5
-DB_PASS=2b99bf15
-DB_NAME=heroku_43e5f966dea8ee4
-DB_HOST=us-cdbr-east-02.cleardb.com
+DB_USER=root
+DB_PASS=root
+DB_NAME=eventos_centificos
+DB_HOST=localhost
 DB_PORT=3306
